<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/menu_home" />


    <item
        android:id="@+id/menu_coupon"
        android:icon="@drawable/coupon"
        android:iconTint="@color/Login_theme"
        android:title="@string/menu_coupon" />

    <item
        android:id="@+id/menu_offers"
        android:icon="@drawable/offer"
        android:title="@string/bottom_menu_offers" />

    <item
        android:id="@+id/menu_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/menu_wallet" />

    <item
        android:id="@+id/menu_notification_setting"
        android:icon="@drawable/notificationsetting"
        android:title="@string/menu_notification_setting" />

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/notification"
        android:title="@string/menu_notification" />

    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/setting"
        android:title="@string/menu_setting" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/cart"
        android:title="@string/bottom_menu_cart" />

    <item
        android:id="@+id/menu_edit_profile"
        android:icon="@drawable/edit_profile"
        android:title="@string/menu_edit_profile" />

    <item
        android:id="@+id/menu_my_address"
        android:icon="@drawable/myaddress"
        android:title="@string/menu_my_address" />

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/baseline_logout_24"
        android:title="@string/menu_log_out" />

</menu>