<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navproduct"
        android:icon="@drawable/product"
        android:iconTint="@color/Login_theme"
        android:title="@string/bottom_menu_product" />

    <item
        android:id="@+id/navoffers"
        android:icon="@drawable/offer"
        android:iconTint="@color/Login_theme"
        android:title="@string/bottom_menu_offers" />

    <item
        android:id="@+id/navhome"
        android:icon="@drawable/home"
        android:iconTint="@color/Login_theme"
        android:title="@string/bottom_menu_home" />

    <item
        android:id="@+id/navcart"
        android:icon="@drawable/cart"
        android:iconTint="@color/Login_theme"
        android:title="@string/bottom_menu_cart" />

    <item
        android:id="@+id/navbhistory"
        android:icon="@drawable/history"
        android:iconTint="@color/Login_theme"
        android:title="@string/bottom_menu_history" />

</menu>