<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottomsheet_design"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reason_for_cancellation_text"
            android:textColor="@color/textview_text_color"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/cancel_bottomsheet_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/baseline_close_24" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r1"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r2"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r3"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r4"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r5"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/r6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r6"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/r7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r7"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/r8_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/r8"
            android:textSize="@dimen/hint_text_size" />

    </RadioGroup>

</LinearLayout>