<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:scrollbars="none"
    tools:context=".Details.Wallet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/linear_padding">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/wallet"
            app:tint="@color/Login_theme" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wallet_heading"
            android:textAlignment="center"
            android:textColor="@color/textview_text_color"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/wallet_sub_heading"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/hint_text_size" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/activate_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginBottom="@dimen/top_margin"
            android:background="@drawable/color_button"
            android:text="@string/activate_wallet_button"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/button_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/card_corners">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/linear_padding">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_bolt_24"
                        app:tint="@color/offer_color_card_2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wallet_card_1_heading"
                        android:textColor="@color/black"
                        android:textSize="@dimen/hint_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wallet_card_1_subheading"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/card_corners">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/linear_padding">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/baseline_shield_24"
                        app:tint="@color/Login_theme" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/wallet_card_2_heading"
                        android:textColor="@color/black"
                        android:textSize="@dimen/hint_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wallet_card_2_subheading"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>