<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/show_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delivery_address_btn"
            android:textColor="@color/textview_text_color"
            android:textSize="@dimen/hint_text_size" />

        <RadioButton
            android:id="@+id/selected_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/details_show_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_address_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_button"
            android:textColor="@color/Login_theme"
            android:textSize="@dimen/hint_text_size"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delivery_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/color_button"
            android:text="@string/delivery_to_this_address"
            android:textAllCaps="false"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/hint_text_size" />

    </LinearLayout>

</LinearLayout>